# ProjectEuler

./: .gitignore  Cargo.toml  ReadMe.md
Haskell/: .gitignore  001.hs  ReadMe.md
Haskell/src/: 001.hs
Haskell/src/Lib/: Cli.hs
Rust/: .gitignore  ReadMe.md
Rust/src/cards/: hand.rs
Rust/src/iterators/: fibonacci.rs
data/tests/: 022.txt  054.txt  059.txt
src/: cards.rs  iterators.rs  lib.rs  math.rs  sudoku.rs  traits.rs
src/iterators/: primes.rs  ranged_permutations.rs
src/traits/: string_extensions.rs
