[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "001"
path = "src/bin/001.rs"

[[bin]]
name = "002"
path = "src/bin/002.rs"

[[bin]]
name = "022"
path = "src/bin/022.rs"

[[bin]]
name = "054"
path = "src/bin/054.rs"

[[bin]]
name = "096"
path = "src/bin/096.rs"

[dependencies]
